syntax = "proto3";

package storage;
option go_package = "./pb";

import "google/protobuf/timestamp.proto";

message FileTask {
  string id = 1;
  string drive_id = 2;
  string path = 3;
  string raw_mime_type = 4;
  string effective_mime_type = 5;
  uint64 size = 6;
  Priority prior = 7;
  google.protobuf.Timestamp created_at = 8;
  int32 retry_count = 9;
}

enum Priority {
  HIGH = 0;
  NORMAL = 1;
}
